fix:hamburger-z-index

--- a/app/assets/stylesheets/hamburger.scss
+++ b/app/assets/stylesheets/hamburger.scss
@@ -1,6 +1,8 @@
 .header {
   position: fixed;
+  right: 0;
   left: 0;
+  z-index: 1030;
   top: 0;
   width: 100%;
   height: 40px;
